--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="format-detection" content="telephone=no,email=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="./dist/css/reset.css">
+	<link rel="stylesheet" href="./dist/css/home.css">
 </head>
 <body>
-	哈哈123
+	<div class="wrapper">
+		<div class="page">
+			<header class="header">
+				<div class="head-dress">
+					<img src="./dist/images/head-dress.jpg" alt="">
+				</div>
+				<h1 class="title">hejianping</h1>
+				<h2 class="description">穿别人的鞋，走自己的路，让别人无路可走</h2>
+			</header>
+			<nav class="nav">
+				<ul>
+					<li><a href="javascript:;">About</a></li>
+					<li><a href="javascript:;">Projects</a></li>
+					<li><a href="javascript:;">Github</a></li>
+				</ul>
+			</nav>
+			<footer class="footer">
+				<p>my first github pages</p>
+			</footer>
+		</div>
+	</div>
 </body>
 </html>
