--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 				<ul>
 					<li><a href="javascript:;">About</a></li>
 					<li><a href="javascript:;">Projects</a></li>
-					<li><a href="javascript:;">Github</a></li>
+					<li><a href="http://caipiao.zcool.com.cn ">zcool</a></li>
+					<li><a href="https://github.com/myfirebug">Github</a></li>
 				</ul>
 			</nav>
 			<footer class="footer">
