修改个人主页

--- a/index.html
+++ b/index.html
@@ -16,20 +16,19 @@
 				<div class="head-dress">
 					<img src="./dist/images/head-dress.jpg" alt="">
 				</div>
-				<h1 class="title">hejianping</h1>
-				<h2 class="description">穿别人的鞋，走自己的路，让别人无路可走</h2>
+				<div class="content">
+					<h1 class="title">myfirebug</h1>
+					<h2 class="phone">18665997697</h2>
+				</div>
 			</header>
 			<nav class="nav">
-				<ul>
-					<li><a href="javascript:;">About</a></li>
-					<li><a href="./ui/dist/html/index.html">UI组件</a></li>
-					<li><a href="http://caipiao.zcool.com.cn ">zcool</a></li>
-					<li><a href="https://github.com/myfirebug">Github</a></li>
-				</ul>
+				<a href="javascript:;">关于我</a>
+				<a href="./ui/dist/html/index.html">jquery UI组件</a>
+				<a href="http://s.ued.daqsoft.com/geekUI/mobile/demo/#/home">vue UI组件</a>
+				<a href="./react-cnode/index.html">react cnode社区</a>
+				<a href="http://caipiao.zcool.com.cn ">站酷</a>
+				<a href="https://github.com/myfirebug">Github</a>
 			</nav>
-			<footer class="footer">
-				<p>my first github pages</p>
-			</footer>
 		</div>
 	</div>
 </body>
