--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<a href="./ui/dist/html/index.html">jquery UI组件</a>
 				<a href="http://s.ued.daqsoft.com/geekUI/mobile/demo/#/home">vue UI组件</a>
 				<a href="./react-cnode/index.html">react cnode社区</a>
-				<a href="./react-cnode-ts/index.html">react cnode社区</a>
+				<a href="./react-cnode-ts/index.html">react cnode ts社区</a>
 				<a href="http://caipiao.zcool.com.cn ">站酷</a>
 				<a href="https://github.com/myfirebug">Github</a>
 			</nav>
