--- a/index.html
+++ b/index.html
@@ -1,40 +1,51 @@
+<!--
+ * @Description: 页面描述
+ * @Author: hejp 378540660@qq.com
+ * @Date: 2022-08-21 18:32:47
+ * @LastEditors: hejp 378540660@qq.com
+ * @LastEditTime: 2022-08-28 11:58:56
+ * @FilePath: \bigscreeng:\hejp\myfirebug.github.io\index.html
+ * Copyright (c) 2022 by hejp email: 378540660@qq.com, All Rights Reserved.
+-->
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="format-detection" content="telephone=no,email=no">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="format-detection" content="telephone=no,email=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title></title>
-    <link rel="stylesheet" href="./dist/css/reset.css">
-    <link rel="stylesheet" href="./dist/css/home.css">
-</head>
+    <link rel="stylesheet" href="./dist/css/reset.css" />
+    <link rel="stylesheet" href="./dist/css/home.css" />
+  </head>
 
-<body>
+  <body>
     <div class="wrapper">
-        <div class="page">
-            <header class="header">
-                <div class="head-dress">
-                    <img src="./dist/images/head-dress.jpg" alt="">
-                </div>
-                <div class="content">
-                    <h1 class="title">myfirebug</h1>
-                    <h2 class="phone">18665997697</h2>
-                </div>
-            </header>
-            <nav class="nav">
-                <a href="javascript:;">关于我</a>
-                <a href="./ui/dist/html/index.html">jquery UI组件</a>
-                <a href="http://s.ued.daqsoft.com/geekUI/mobile/demo/#/home">vue UI组件</a>
-                <a href="./react-cnode/index.html">react cnode社区</a>
-                <a href="./react-cnode-ts/index.html">react cnode ts社区</a>
-                <a href="http://caipiao.zcool.com.cn ">站酷</a>
-                <a href="https://github.com/myfirebug">Github</a>
-                <a href="./bigscreen/index.html">大屏后台管理系统-纯前端</a>
-            </nav>
-        </div>
+      <div class="page">
+        <header class="header">
+          <div class="head-dress">
+            <img src="./dist/images/head-dress.jpg" alt="" />
+          </div>
+          <div class="content">
+            <h1 class="title">myfirebug</h1>
+            <h2 class="phone">18665997697</h2>
+          </div>
+        </header>
+        <nav class="nav">
+          <a href="javascript:;">关于我</a>
+          <a href="./ui/dist/html/index.html">jquery UI组件</a>
+          <a href="http://s.ued.daqsoft.com/geekUI/mobile/demo/#/home"
+            >vue UI组件</a
+          >
+          <a href="./react-cnode/index.html">react cnode社区</a>
+          <a href="http://caipiao.zcool.com.cn ">站酷</a>
+          <a href="https://github.com/myfirebug">Github</a>
+          <a href="./bigscreen/index.html">大屏后台管理系统-纯前端</a>
+        </nav>
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
