更新正式环境

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
  * @Author: hejp 378540660@qq.com
  * @Date: 2022-08-21 18:32:47
  * @LastEditors: hejp 378540660@qq.com
- * @LastEditTime: 2022-08-28 11:58:56
- * @FilePath: \bigscreeng:\hejp\myfirebug.github.io\index.html
+ * @LastEditTime: 2022-09-07 10:31:31
+ * @FilePath: \bigscreend:\work\myfirebug.github.io\index.html
  * Copyright (c) 2022 by hejp email: 378540660@qq.com, All Rights Reserved.
 -->
 <!DOCTYPE html>
@@ -41,7 +41,6 @@
             >vue UI组件</a
           >
           <a href="./react-cnode/index.html">react cnode社区</a>
-          <a href="http://caipiao.zcool.com.cn ">站酷</a>
           <a href="https://github.com/myfirebug">Github</a>
           <a href="./bigscreen/index.html">大屏后台管理系统-纯前端</a>
         </nav>
