feat 增加个人简历

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
  * @Author: hejp 378540660@qq.com
  * @Date: 2022-08-21 18:32:47
  * @LastEditors: hejp 378540660@qq.com
- * @LastEditTime: 2022-09-07 10:31:31
- * @FilePath: \bigscreend:\work\myfirebug.github.io\index.html
+ * @LastEditTime: 2023-03-01 10:19:10
+ * @FilePath: \myfirebug.github.io\index.html
  * Copyright (c) 2022 by hejp email: 378540660@qq.com, All Rights Reserved.
 -->
 <!DOCTYPE html>
@@ -35,7 +35,7 @@
           </div>
         </header>
         <nav class="nav">
-          <a href="javascript:;">关于我</a>
+          <a href="./pages/resume/index.html">我的简历</a>
           <a href="./ui/dist/html/index.html">jquery UI组件</a>
           <a href="http://s.ued.daqsoft.com/geekUI/mobile/demo/#/home"
             >vue UI组件</a
@@ -43,6 +43,7 @@
           <a href="./react-cnode/index.html">react cnode社区</a>
           <a href="https://github.com/myfirebug">Github</a>
           <a href="./bigscreen/index.html">大屏后台管理系统-纯前端</a>
+          <a href="./flow-chart/index.html">流程图后台管理系统(开发中)</a>
         </nav>
       </div>
     </div>
