--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="wrapper">
       <div class="page">
-        <header class="header">
+        <!-- <header class="header">
           <div class="head-dress">
             <img src="./dist/images/head-dress.jpg" alt="" />
           </div>
@@ -33,9 +33,9 @@
             <h1 class="title">myfirebug</h1>
             <h2 class="phone">18665997697</h2>
           </div>
-        </header>
+        </header> -->
         <nav class="nav">
-          <a href="./pages/resume/index.html">我的简历</a>
+          <!-- <a href="./pages/resume/index.html">我的简历</a> -->
           <a href="./ui/dist/html/index.html">jquery UI组件</a>
           <a href="http://s.ued.daqsoft.com/geekUI/mobile/demo/#/home"
             >vue UI组件</a
