--- a/index.html
+++ b/index.html
@@ -24,28 +24,26 @@
 
   <body>
     <div class="wrapper">
-      <div class="page">
-        <!-- <header class="header">
-          <div class="head-dress">
-            <img src="./dist/images/head-dress.jpg" alt="" />
-          </div>
-          <div class="content">
-            <h1 class="title">myfirebug</h1>
-            <h2 class="phone">18665997697</h2>
-          </div>
-        </header> -->
-        <nav class="nav">
-          <!-- <a href="./pages/resume/index.html">我的简历</a> -->
-          <a href="./ui/dist/html/index.html">jquery UI组件</a>
-          <a href="http://s.ued.daqsoft.com/geekUI/mobile/demo/#/home"
-            >vue UI组件</a
-          >
-          <a href="https://github.com/myfirebug">Github</a>
-          <a href="./bigscreen/index.html">大屏后台管理系统1.0.0</a>
-          <a href="./bigscreen/v2.0.0">大屏后台管理系统2.0.0</a>
-          <a href="./flow-chart/index.html">流程图后台管理系统</a>
-        </nav>
-      </div>
+      <header class="header">
+        <div class="content">
+          <h1 class="title">myfirebug</h1>
+          <h2 class="phone">走自己的路，穿别人的鞋，让别人无路可走</h2>
+        </div>
+        <div class="head-dress">
+          <img src="./dist/images/head-dress.jpg" alt="" />
+        </div>
+      </header>
+      <nav class="nav">
+        <!-- <a href="./pages/resume/index.html">我的简历</a> -->
+        <a href="./ui/dist/html/index.html">jquery UI组件</a>
+        <a href="http://s.ued.daqsoft.com/geekUI/mobile/demo/#/home"
+          >vue UI组件</a
+        >
+        <a href="https://github.com/myfirebug">Github</a>
+        <a href="./bigscreen/index.html">大屏后台管理系统1.0.0</a>
+        <a href="./bigscreen/v2.0.0">大屏后台管理系统2.0.0</a>
+        <a href="./flow-chart/index.html">流程图后台管理系统</a>
+      </nav>
     </div>
   </body>
 </html>
